substrate/primitives/api/test/tests/ui/missing_versioned_method.stderr
error[E0046]: not all trait items implemented, missing: `test3`
  --> tests/ui/missing_versioned_method.rs:35:2
   |
29 |         fn test3();
   |         ----------- `test3` from trait
...
35 |     impl self::Api<Block> for Runtime {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `test3` in implementation
